--- a/journalentry/journalentry.csproj
+++ b/journalentry/journalentry.csproj
@@ -45,6 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataTables-Editor-Server">
+      <HintPath>lib\net45\DataTables-Editor-Server.dll</HintPath>
+    </Reference>
     <Reference Include="EmbeddedResourceVirtualPathProvider, Version=1.3.51.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\EmbeddedResourceVirtualPathProvider.Core.1.3.51\lib\net40\EmbeddedResourceVirtualPathProvider.dll</HintPath>
       <Private>True</Private>
@@ -240,6 +243,11 @@
     <Compile Include="Models\JournalEntryViewModel.cs" />
     <Compile Include="Models\EntryRow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\banner.jpg" />
@@ -288,6 +296,10 @@
     <None Include="Properties\PublishProfiles\Developer.pubxml" />
     <Content Include="Views\JournalEntry\Create.cshtml" />
     <Content Include="Views\Shared\_PageTitle.cshtml" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
